# AgnosticBamCounter

./: Cargo.toml  LICENSE  README.md  changelog.txt
.devcontainer/: devcontainer.json
src/: libs.rs  main.rs
test/: test_mpileup.bam  test_mpileup.bam.bai  test_mpileup.bed  test_mpileup.verified_ref.tsv  test_mpileup_1.bed  test_ref.fa.fai
