[package]
name    = "abc"
version = "0.3.1"
authors = ["Emanuel Schmid-Siegert"]
edition = "2018"
description   =  """
The Agnostic Bam Counter (abc) determines at a given positions the count of observed nucleotides.
Simply supply a bed file with positions and obtains a tsv file with counts for each ATCG and reference if provided.
If a reference file is provided it evaluates further the reference and variant allele frequency.
This is though always a sum over all potentially multi-allelic site.

Note: 
 - one needs to supply single nucleotide positions and not a range
 - it will sort both, by chromosome and then position - this might pose problems with funky contig names!
 - it is similar to BED 0 based so a SAM position 1000 would translate to 999-1000

"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "*", default-features = false }
#regex = "1"
clap = "*"
csv = "*"
chrono = "*"
bio = "*"
itertools = "*"
bambam = {git = "https://github.com/ebioman/bambam"}
crossbeam = "*"
crossbeam-channel = "*"
rayon = "*"
