[package]
name    = "abc"
version = "0.3.1"
authors = ["Emanuel Schmid-Siegert"]
description   =  """
The Agnostic Bam Counter (abc) determines at a given positions the count of observed nucleotides.
Simply supply a bed file with positions and obtains a tsv file with counts for each ATCG and reference if provided.
If a reference file is provided it evaluates further the reference and variant allele frequency.
This is though always a sum over all potentially multi-allelic site.

Note: 
 - one needs to supply single nucleotide positions and not a range
 - it will sort both, by chromosome and then position - this might pose problems with funky contig names!
 - it is similar to BED 0 based so a SAM position 1000 would translate to 999-1000

"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.40.2"
#regex = "1"
clap = "4.1.6"
csv = "1.2.0"
chrono = "0.4.23"
bio = "1.1.0"
itertools = "*"
bambam = {git = "https://github.com/ebioman/bambam"}
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
rayon = "1.6.1"
