[package]
name    = "abc"
version = "0.3.3"
authors = ["Emanuel Schmid-Siegert"]
description   =  """
The Agnostic Bam Counter (abc) determines at a given positions the count of observed nucleotides.
Simply supply a bed file with positions and obtains a tsv file with counts for each ATCG and reference if provided.
If a reference file is provided it evaluates further the reference and variant allele frequency.
This is though always a sum over all potentially multi-allelic site.

Note: 
 - one needs to supply single nucleotide positions and not a range
 - it will sort both, by chromosome and then position - this might pose problems with funky contig names!
 - it is similar to BED 0 based so a SAM position 1000 would translate to 999-1000

"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = { version = "0.46.0", default-features = false }
#regex = "1"
log = "0.4.22"
env_logger = "0.11.5"
clap = "2.26.0"
csv = "*"
chrono = "*"
bio = "2.0.3"
itertools = "0.13.0"
bambam = {git = "https://github.com/ebioman/bambam"}
crossbeam = "0.8.4"
crossbeam-channel = "*"
rayon = "1.10.0"
